# SBOM-Converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATA_PRESERVATION.md  DEVELOPMENT_SETUP.md  LICENSE-APACHE  LICENSE-MIT  README.md  bom.json  sbom-cyclonedx.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
examples/: README.md
schemas/: cdx_1.6.schema.json  spdx.xsd  spdx_3.0.1.schema.json
scripts/: setup-hooks.sh
src/: cdx_version.rs  converter_cdx_to_spdx.rs  converter_spdx_to_cdx.rs  diff.rs  errors.rs  lib.rs  main.rs  merge.rs  models_cdx.rs  models_spdx.rs  progress.rs  schema.rs  validation.rs  version_detection.rs  xml_validator.rs
src/formats/: mod.rs
src/formats/cdx/: converter.rs  document.rs  json.rs  mod.rs  xml.rs
src/formats/spdx/: json.rs  mod.rs  xml.rs
tests/: diff_test.rs  integration_test.rs  merge_test.rs  multi_version_test.rs  xml_format_test.rs
