[package]
name = "sbom-converter"
version = "0.1.0"
edition = "2024"
description = "A production-grade converter for CycloneDX 1.6 and SPDX 3.0.1 SBOM formats."

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
jsonschema = "0.33.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
