[package]
name = "sbom-converter"
version = "1.1.0"
edition = "2024"
description = "A production-grade tool for SBOM conversion, merging, and comparison supporting CycloneDX 1.3-1.7 and SPDX 3.0.1 formats."
license = "MIT OR Apache-2.0"
repository = "https://github.com/stondo/SBOM-Converter"
keywords = ["sbom", "spdx", "cyclonedx", "security", "supply-chain"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
jsonschema = "0.33.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = "0.4"
quick-xml = { version = "0.36", features = ["serialize"] }
colored = "2.1"
libxml = "0.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
